--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,10 +7,13 @@
         <item name="colorOnPrimary">@color/colorPrimary</item>
 
         <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
     <style name="Theme.FruitHub.Fullscreen" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <item name="android:windowFullscreen">true</item>
+    </style>
+
+    <style name="BottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="fontFamily">@font/brandon_grotesque_regular</item>
     </style>
 </resources>
