Fix system and navigation bars

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#FFA451</color>
 
     <color name="black">#FF000000</color>
+    <color name="black_330">#33000000</color>
     <color name="black_5d5">#5D577E</color>
 
     <color name="white">#FFFFFFFF</color>
