--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/fl_main_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="@id/bnv_main_menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +23,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fl_main_container"
         app:menu="@menu/menu_main" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
